--- a/core/templates/core/changeorder_detail_standalone.html
+++ b/core/templates/core/changeorder_detail_standalone.html
@@ -635,6 +635,11 @@
             <a href="{% url 'changeorder_board' %}" class="btn btn-secondary">
                 <i class="bi bi-arrow-left"></i> Volver al Board
             </a>
+            {% if changeorder.status in 'billed,paid' %}
+            <a href="{% url 'changeorder_billing_history' changeorder.id %}" class="btn btn-outline" style="border-color: #059669; color: #059669;">
+                <i class="bi bi-receipt-cutoff"></i> Ver Historial de Facturación
+            </a>
+            {% endif %}
             <a href="{% url 'changeorder_edit' changeorder.id %}" class="btn btn-primary">
                 <i class="bi bi-pencil"></i> Editar
             </a>
